Bug fix carousel indicators visible over menu

--- a/assets/css/menubar.css
+++ b/assets/css/menubar.css
@@ -3,7 +3,7 @@
 	border-bottom: 1px solid #f2d2cf;
 	height: 100px;
 	width: 100%;
-	z-index: 2;
+	z-index: 20;
 }
 .menu_bar.sticky {
 	position: fixed;
